--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
     border-radius: 5px;
     width: 92%;
     height: 65%;
+    font-size: 30px;
 }
 
 .button{
@@ -35,6 +36,7 @@
     border-radius: 5px;
     height: 70%;
     outline: none;
+    font-size: 30px;
 }
 
 .button:active{
